--- a/eth-netstats/Dockerfile
+++ b/eth-netstats/Dockerfile
@@ -1,15 +1,16 @@
-FROM node:8-alpine
+FROM node:16-alpine
 
-RUN apk add --update git
+RUN apk add --no-cache git bash perl
 
-RUN git clone https://github.com/cubedro/eth-netstats
+RUN git clone https://github.com/cubedro/eth-netstats.git /eth-netstats
 
 WORKDIR /eth-netstats
 
 RUN npm install
-RUN npm install -g grunt-cli
+RUN npm install -g grunt-cli@1.2.0 --unsafe-perm
 RUN grunt
 
 EXPOSE 3000
 
 CMD ["npm", "start"]
+
